Fixed item_description css class alignment
[#70]

--- a/app/assets/stylesheets/components/_items.scss
+++ b/app/assets/stylesheets/components/_items.scss
@@ -40,4 +40,6 @@
 .item__description {
   color: black;
   font-size: 12px;
+  display: block;
+  clear: both;
 }
